@@ -13,6 +13,7 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
+import java.util.Collections;
 import java.util.List;
 import org.eclipse.xpanse.modules.models.credential.AbstractCredentialInfo;
 import org.eclipse.xpanse.modules.models.credential.CredentialVariable;
@@ -71,6 +72,6 @@ class ScsOrchestratorPluginTest {
 
     @Test
     void testRequiredProperties() {
-        assertThat(plugin.requiredProperties()).isEqualTo(List.of(ScsEnvironmentConstants.AUTH_URL));
+        assertThat(plugin.requiredProperties()).isEqualTo(Collections.emptyList());
     }
 }
